fix: divider alignment chnage

--- a/src/pages/AssessmentBank/AssessmentBankLandingPage.scss
+++ b/src/pages/AssessmentBank/AssessmentBankLandingPage.scss
@@ -161,8 +161,8 @@
 
   .divider{
     padding-top: 24px;
-    margin-left: 32px;
-    margin-right: 32px;
+    //margin-left: 32px;
+    //margin-right: 32px;
   }
   .mantine-MultiSelect-wrapper-AssessmentBank {
     //text-align: center;
