--- a/src/pages/AssessmentBank/ScheduleSurvey/styles.scss
+++ b/src/pages/AssessmentBank/ScheduleSurvey/styles.scss
@@ -6,3 +6,8 @@
     color-scheme: dark;
   }
 }
+
+.top-divider {
+  padding-right: 70px !important;
+  padding-left: 43px !important;
+}
